--- a/example/template/index.html
+++ b/example/template/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>@e-group/react-component-kit</title>
+    <title>react-twzipcode</title>
   </head>
   <body>
     <div id="app"></div>
